# backup-script

./: .gitignore  README.md  backup_app.py  file_state_dirs.json  pyproject.toml  script.py  test.py
src/: file_state_dirs.json  file_state_files.json  script.py  tools.py
tests/: test.py  test_helpers.py  test_traverse_directory_tree.py  test_traverse_directory_tree_dirs.py  test_traverse_directory_tree_files.py
