[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"                  # name on PyPI
version = "0.1.0"
description = "My awesome CLI tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []               # if your module uses requests, click, etc.

[project.scripts]
myapp = "backup_app:main_wrapped"
